<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

   <RelativeLayout
        android:id="@+id/welcome_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:text="@string/welcome_review_upload"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_upload_single"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/textView3"
		    android:layout_marginLeft="40dp"
		    android:src="@drawable/upload_new" />
		
		<TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_upload_day"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<ImageView
		    android:id="@+id/imageView2"
		    android:layout_width="170dp"
		    android:layout_height="100dp"
		    android:layout_below="@+id/textView4"
		    android:layout_marginLeft="40dp"
		    android:src="@drawable/upload_day" />
		
		<TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_upload_new"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<ImageView
		    android:id="@+id/imageView3"
		    android:layout_width="170dp"
		    android:layout_height="130dp"
		    android:layout_below="@+id/textView5"
		    android:layout_marginLeft="40dp"
		    android:src="@drawable/upload_entry" />


    </RelativeLayout>

</ScrollView>