<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

   <RelativeLayout
        android:id="@+id/welcome_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:text="@string/welcome_last_least"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/textView2"
		    android:layout_marginTop="5dp"
		    android:layout_marginLeft="40dp"
		    android:src="@drawable/my_places" />
		
		<ImageView
		    android:id="@+id/imageView3"
		    android:layout_width="200dp"
		    android:layout_height="220dp"
		    android:layout_below="@+id/imageView1"
		    android:layout_marginTop="5dp"
		    android:layout_marginLeft="40dp"
		    android:src="@drawable/my_places_demo" />
		
		<TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView3"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_places"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<ImageView
		    android:id="@+id/imageView2"
		    android:layout_width="200dp"
		    android:layout_height="70dp"
		    android:layout_below="@+id/textView4"
		    android:layout_marginLeft="40dp"
		    android:src="@drawable/my_places_store" />

		<CheckBox
		    android:id="@+id/checkBox1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/imageView2"
		    android:layout_marginTop="20dp"
		    android:text="@string/welcome_do_not_show_again" />
		
    </RelativeLayout>

</ScrollView>