<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/scrollView1"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    	    android:background="@color/white"
	    
	    >

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	        
	    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bar"
        android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">
	    
		   	<TextView
		       	android:id="@+id/titleabout"
		       	android:layout_width="wrap_content"
		       	android:layout_height="wrap_content"
		       	android:layout_centerVertical="true"
		        android:paddingLeft="50dp"
		       	android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textStyle="bold"
				android:textColor="@color/black"
		       	android:text="About"
		    />
	   	</RelativeLayout>
	   
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp">
			   	
			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
				android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
			    android:layout_marginTop="40dp"
			    android:text="@string/about_thank_you"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="@color/black"
			    android:paddingLeft="2dp" />
			
			<TextView
			    android:id="@+id/textView4"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_below="@+id/textView1"
			    android:text="Contact Email:"
			    android:layout_marginTop="20dp"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="@color/black"
			    android:paddingLeft="2dp" />
		
			<TextView
			    android:id="@+id/textEmail"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/textView4"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="@color/black"
			    android:paddingLeft="2dp" />
	<!-- 		
			<View
		        	android:id="@+id/horizontalLine1"
		        	android:layout_width="fill_parent"
					android:layout_height="1dip"
					android:layout_below="@+id/textEmail1"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="4dp"
					android:layout_marginLeft="40dp"
					android:layout_marginRight="40dp"
					android:alpha=".9"
					android:background="#aaa" />
			
			<TextView
			    android:id="@+id/textComments"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="center"
			    android:layout_below="@+id/horizontalLine1"
			    android:text="@string/about_comments"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="@color/white"
			    android:paddingLeft="2dp" />
	-->	
			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_below="@+id/textEmail"
			    android:text="@string/about_this_project"
			    android:layout_marginTop="10dp"
			    android:textColor="@color/black"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:paddingLeft="2dp" />
		
			<TextView
			    android:id="@+id/textView3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_below="@+id/textView2"
			    android:layout_marginTop="5dp"
			    android:text="@string/about_more_info"
			    android:textColor="@color/black"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:paddingLeft="2dp" />
			
			<TextView
			    android:id="@+id/textWebpage"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/textView3"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="@color/black"
			    android:paddingLeft="2dp" />
			
		</RelativeLayout>
	
	</RelativeLayout>
</ScrollView>